--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,13 +44,7 @@
   color: #393c41;
   margin: 0;
   padding: 0;
-}
-
-html,
-body {
-  min-width: 100%;
-  min-height: 100%;
-  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -75,10 +69,17 @@ a {
   }
 }
 
-#imageSize {
+/* html,
+body {
+  min-width: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
+} */
+
+/* #imageSize {
   object-fit: cover;
   object-position: bottom;
-}
+} */
 
 /*::-webkit-scrollbar {
   display: none;
