Click out of nav and styling updates

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,12 +69,10 @@ a {
   }
 }
 
-/* html,
 body {
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
   overflow-x: hidden;
-} */
+}
 
 /* #imageSize {
   object-fit: cover;
